KSCM-2566 - Approve Rationale - button and cancel link in FireFox have unexpected alignment - Fixed
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@73732 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
@@ -801,7 +801,7 @@ fieldset .uif-actionLink{
   }
   fieldset[data-type="RadioSet"] {
     padding-top: 20px;
-    padding-left: 370px;
+    padding-left: 350px;
   }
 }
 
